Bug 123023 - [mips][arm EABI] Fix J_JITOperation_EAapJ call in JIT.
Summary: [mips][arm EABI] Fix J_JITOperation_EAapJ call in JIT.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 108645
  Show dependency treegraph
 
Reported: 2013-10-18 07:51 PDT by Julien Brianceau
Modified: 2013-10-21 08:30 PDT (History)
5 users (show)

See Also:


Attachments
Fix J_JITOperation_EAapJ call for MIPS and ARM EABI. (1.37 KB, patch)
2013-10-18 07:55 PDT, Julien Brianceau
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Brianceau 2013-10-18 07:51:37 PDT
EABI_32BIT_DUMMY_ARG is not expected in the following function, the EncodedJSValue parameter is already aligned to even registers for MIPS and ARM EABI (in 3rd and 4th argument registers):

    ALWAYS_INLINE MacroAssembler::Call JIT::callOperation(J_JITOperation_EAapJ operation, int dst, ArrayAllocationProfile* arg1, GPRReg arg2Tag, GPRReg arg2Payload)
    {
        setupArgumentsWithExecState(TrustedImmPtr(arg1), EABI_32BIT_DUMMY_ARG arg2Payload, arg2Tag);
        return appendCallWithExceptionCheckSetJSValueResult(operation, dst);
    }
Comment 1 Julien Brianceau 2013-10-18 07:55:35 PDT
Created attachment 214572 [details]
Fix J_JITOperation_EAapJ call for MIPS and ARM EABI.
Comment 2 WebKit Commit Bot 2013-10-18 08:22:14 PDT
Comment on attachment 214572 [details]
Fix J_JITOperation_EAapJ call for MIPS and ARM EABI.

Clearing flags on attachment: 214572

Committed r157633: <http://trac.webkit.org/changeset/157633>
Comment 3 WebKit Commit Bot 2013-10-18 08:22:16 PDT
All reviewed patches have been landed.  Closing bug.